fix bottom nav bar overlap on large screen devices
vv

ff

--- a/web/assets/stylesheets/application.css
+++ b/web/assets/stylesheets/application.css
@@ -634,8 +634,12 @@ div.interval-slider input {
 .container {
   padding: 0;
 }
+.navbar-fixed-bottom {
+  position: relative;
+  top: auto;
+}
 @media (max-width: 767px) {
-  .navbar-fixed-top, .navbar-fixed-bottom {
+  .navbar-fixed-top {
     position: relative;
     top: auto;
   }
